// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the OsiPiForm errors 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      api.url
       
      <span
        class="red-text"
      >
        *
      </span>
    </label>
    <small
      class="form-text text-muted"
    >
      description.osiPi.apiUrl
    </small>
    <input
      class="form-control"
      id="osiPi_apiUrl"
      placeholder="placeholder.osiPi.apiUrl"
      required=""
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    />
  </div>
  <div
    class="form-group"
  >
    <div
      class="form-check form-check-inline"
    >
      <input
        checked=""
        class="form-check-input"
        id="osiPi_verifySSL"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="osiPi_verifySSL"
        title=""
      >
        verify.ssl
      </label>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      server.name
       
      <span
        class="red-text"
      >
        *
      </span>
    </label>
    <small
      class="form-text text-muted"
    >
      description.osiPi.serverName
    </small>
    <input
      class="form-control"
      id="osiPi_serverName"
      placeholder="placeholder.osiPi.serverName"
      required=""
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    />
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        authentication
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          auth.mode
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.authMode
        </small>
        <select
          class="form-control"
          id="osiPi_authMode"
        >
          <option
            value="ANONYMOUS"
          >
            Anonymous
          </option>
          <option
            value="BASIC"
          >
            Basic
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <span>
         
      </span>
    </div>
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        query.config
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          request.frequency
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.requestFrequency
        </small>
        <input
          class="form-control"
          id="osiPi_requestFrequency"
          placeholder="placeholder.osiPi.requestFrequency"
          required=""
          type="text"
          value="5"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          catchup.frequency
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.catchupFrequency
        </small>
        <input
          class="form-control"
          id="osiPi_catchupFrequency"
          placeholder="placeholder.osiPi.catchupFrequency"
          required=""
          type="text"
          value="0.1"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          max.request.duration
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.maxRequestDuration
        </small>
        <input
          class="form-control"
          id="osiPi_maxRequestDuration"
          placeholder="placeholder.osiPi.maxRequestDuration"
          required=""
          type="text"
          value="60"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          query.offset
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.queryOffset
        </small>
        <input
          class="form-control"
          id="osiPi_queryOffset"
          placeholder="placeholder.osiPi.queryOffset"
          required=""
          type="text"
          value="0"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <span>
         
      </span>
    </div>
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        tags
         
        tags.explanation
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          read.tags
        </label>
        <textarea
          class="form-control"
          id="osiPiTags"
          placeholder="placeholder.osiPi.tags"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the OsiPiForm with the existing connection 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      api.url
       
      <span
        class="red-text"
      >
        *
      </span>
    </label>
    <small
      class="form-text text-muted"
    >
      description.osiPi.apiUrl
    </small>
    <input
      class="form-control"
      id="osiPi_apiUrl"
      placeholder="placeholder.osiPi.apiUrl"
      required=""
      type="text"
      value="https://osiPiServer/piwebapi"
    />
    <div
      class="invalid-feedback"
    />
  </div>
  <div
    class="form-group"
  >
    <div
      class="form-check form-check-inline"
    >
      <input
        checked=""
        class="form-check-input"
        id="osiPi_verifySSL"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="osiPi_verifySSL"
        title=""
      >
        verify.ssl
      </label>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      server.name
       
      <span
        class="red-text"
      >
        *
      </span>
    </label>
    <small
      class="form-text text-muted"
    >
      description.osiPi.serverName
    </small>
    <input
      class="form-control"
      id="osiPi_serverName"
      placeholder="placeholder.osiPi.serverName"
      required=""
      type="text"
      value="mock-server"
    />
    <div
      class="invalid-feedback"
    />
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        authentication
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          auth.mode
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.authMode
        </small>
        <select
          class="form-control"
          id="osiPi_authMode"
        >
          <option
            value="ANONYMOUS"
          >
            Anonymous
          </option>
          <option
            value="BASIC"
          >
            Basic
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          username
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.username
        </small>
        <input
          class="form-control"
          id="osiPi_username"
          placeholder="placeholder.osiPi.username"
          required=""
          type="text"
          value="mock-user"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          password
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.password
        </small>
        <input
          class="form-control"
          id="osiPi_password"
          placeholder="placeholder.osiPi.password"
          required=""
          type="password"
          value="mock-password"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <span>
         
      </span>
    </div>
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        query.config
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          request.frequency
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.requestFrequency
        </small>
        <input
          class="form-control"
          id="osiPi_requestFrequency"
          placeholder="placeholder.osiPi.requestFrequency"
          required=""
          type="text"
          value="5"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          catchup.frequency
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.catchupFrequency
        </small>
        <input
          class="form-control"
          id="osiPi_catchupFrequency"
          placeholder="placeholder.osiPi.catchupFrequency"
          required=""
          type="text"
          value="0.1"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          max.request.duration
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.maxRequestDuration
        </small>
        <input
          class="form-control"
          id="osiPi_maxRequestDuration"
          placeholder="placeholder.osiPi.maxRequestDuration"
          required=""
          type="text"
          value="60"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          query.offset
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.queryOffset
        </small>
        <input
          class="form-control"
          id="osiPi_queryOffset"
          placeholder="placeholder.osiPi.queryOffset"
          required=""
          type="text"
          value="0"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <span>
         
      </span>
    </div>
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        tags
         
        tags.explanation
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          read.tags
        </label>
        <textarea
          class="form-control"
          id="osiPiTags"
          placeholder="placeholder.osiPi.tags"
        >
          tag1
tag2
        </textarea>
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the default OsiPiForm 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      api.url
       
      <span
        class="red-text"
      >
        *
      </span>
    </label>
    <small
      class="form-text text-muted"
    >
      description.osiPi.apiUrl
    </small>
    <input
      class="form-control"
      id="osiPi_apiUrl"
      placeholder="placeholder.osiPi.apiUrl"
      required=""
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    />
  </div>
  <div
    class="form-group"
  >
    <div
      class="form-check form-check-inline"
    >
      <input
        checked=""
        class="form-check-input"
        id="osiPi_verifySSL"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="osiPi_verifySSL"
        title=""
      >
        verify.ssl
      </label>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
    >
      server.name
       
      <span
        class="red-text"
      >
        *
      </span>
    </label>
    <small
      class="form-text text-muted"
    >
      description.osiPi.serverName
    </small>
    <input
      class="form-control"
      id="osiPi_serverName"
      placeholder="placeholder.osiPi.serverName"
      required=""
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    />
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        authentication
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          auth.mode
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.authMode
        </small>
        <select
          class="form-control"
          id="osiPi_authMode"
        >
          <option
            value="ANONYMOUS"
          >
            Anonymous
          </option>
          <option
            value="BASIC"
          >
            Basic
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <span>
         
      </span>
    </div>
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        query.config
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          request.frequency
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.requestFrequency
        </small>
        <input
          class="form-control"
          id="osiPi_requestFrequency"
          placeholder="placeholder.osiPi.requestFrequency"
          required=""
          type="text"
          value="5"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          catchup.frequency
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.catchupFrequency
        </small>
        <input
          class="form-control"
          id="osiPi_catchupFrequency"
          placeholder="placeholder.osiPi.catchupFrequency"
          required=""
          type="text"
          value="0.1"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          max.request.duration
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.maxRequestDuration
        </small>
        <input
          class="form-control"
          id="osiPi_maxRequestDuration"
          placeholder="placeholder.osiPi.maxRequestDuration"
          required=""
          type="text"
          value="60"
        />
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          query.offset
           
          <span
            class="red-text"
          >
            *
          </span>
        </label>
        <small
          class="form-text text-muted"
        >
          description.osiPi.queryOffset
        </small>
        <input
          class="form-control"
          id="osiPi_queryOffset"
          placeholder="placeholder.osiPi.queryOffset"
          required=""
          type="text"
          value="0"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      <span>
         
      </span>
    </div>
  </div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-subtitle h6"
      >
        tags
         
        tags.explanation
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <span>
             
          </span>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="form-label"
        >
          read.tags
        </label>
        <textarea
          class="form-control"
          id="osiPiTags"
          placeholder="placeholder.osiPi.tags"
        />
        <div
          class="invalid-feedback"
        />
      </div>
    </div>
  </div>
</div>
`;
